# mask

./: CMakeLists.txt
include/: angleSampling.h  b3dutil.h  hconfigure.h  imodconfig.h  mrcfiles.h  parse_params.h
src/: CMakeLists.txt  mask_lyc.cpp
test/: CMakeLists.txt  imodmop.c  mask_lyc.cpp
